Updated bashrc theme, changed tmux leader key

--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -34,5 +34,10 @@ bind-key -r r source-file ~/.tmux.conf
 
 set-option -g default-terminal "screen-256color"
 
+# Changing leader key since this is mostly used in SSH
+unbind C-b
+set-option -g prefix C-a
+bind C-a send-prefix
+
 # sharing buffer with system for macOS
 # bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
