--- a/config/tmux/Darwin/.tmux.conf
+++ b/config/tmux/Darwin/.tmux.conf
@@ -19,10 +19,6 @@ set -g status-position top
 set -g status-interval 1
 set -g status-left ""
 
-# disable status
-# set -g status off
-# set -g status on
-
 # count the panes from 1
 set -g base-index 1
 setw -g pane-base-index 1
@@ -31,8 +27,15 @@ setw -g pane-base-index 1
 bind-key -r r source-file ~/.tmux.conf
 
 # term colors, these are the correct ones according to neovim checkhealth
-
 set-option -g default-terminal "screen-256color"
 
-# sharing buffer with system
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'b0o/tmux-autoreload'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
