--- a/config/tmux/Darwin/.tmux.conf
+++ b/config/tmux/Darwin/.tmux.conf
@@ -5,19 +5,12 @@ set -g mouse on
 set -sg escape-time 10
 set-option -g focus-events on
 
-
-# vi for copy mode
+# vi
 setw -g mode-keys vi
-
-# status bar
-set -g status-right "#(pomo)"
-set -g status-style "fg=#665c54"
-set -g status-left-style "fg=#928374"
-
-set -g status-bg default
-set -g status-position top
-set -g status-interval 1
-set -g status-left ""
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # count the panes from 1
 set -g base-index 1
@@ -34,8 +27,13 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'b0o/tmux-autoreload'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Plugin customization
+set -g @minimal-tmux-status "top"
+set -g @minimal-tmux-justify "left"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
