Lazyvim updated, disabled right part of the status bar

--- a/config/tmux/Darwin/.tmux.conf
+++ b/config/tmux/Darwin/.tmux.conf
@@ -34,6 +34,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # Plugin customization
 set -g @minimal-tmux-status "top"
 set -g @minimal-tmux-justify "left"
+set -g @minimal-tmux-right false
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
