some tmux fzf integrations

--- a/config/tmux/Darwin/.tmux.conf
+++ b/config/tmux/Darwin/.tmux.conf
@@ -35,6 +35,7 @@ set -g @plugin 'b0o/tmux-autoreload'
 set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # Plugin customization
 set -g @minimal-tmux-status "top"
