added new brew dependencies, lazyvim updates

--- a/requirements/Darwin/Brewfile
+++ b/requirements/Darwin/Brewfile
@@ -25,6 +25,8 @@ brew "neovim"
 brew "nodenv"
 brew "rclone"
 brew "reattach-to-user-namespace"
+brew "rhajizada/tap/copycat"
+brew "rhajizada/tap/donezo"
 brew "ripgrep"
 brew "rsync"
 brew "rustup"
