--- a/config/tmux/Linux/.tmux.conf
+++ b/config/tmux/Linux/.tmux.conf
@@ -27,11 +27,6 @@ bind-key -r r source-file ~/.tmux.conf
 # term colors, these are the correct ones according to neovim checkhealth
 set-option -g default-terminal "screen-256color"
 
-# Changing leader key since this is mostly used in SSH
-unbind C-b
-set-option -g prefix C-a
-bind C-a send-prefix
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -40,6 +35,7 @@ set -g @plugin 'b0o/tmux-autoreload'
 set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # Plugin customization
 set -g @minimal-tmux-status "top"
