--- a/config/git/Linux/.gitconfig
+++ b/config/git/Linux/.gitconfig
@@ -31,7 +31,7 @@
 
 [credential "https://github.com"]
 	helper = 
-	helper = !/home/hajizada/.linuxbrew/bin/gh auth git-credential
+	helper = !/home/linuxbrew/.linuxbrew/bin/gh auth git-credential
 [credential "https://gist.github.com"]
 	helper = 
-	helper = !/home/hajizada/.linuxbrew/bin/gh auth git-credential
+	helper = !/home/linuxbrew/.linuxbrew/bin/gh auth git-credential
