Adding crush configuration

--- a/requirements/Darwin/Brewfile
+++ b/requirements/Darwin/Brewfile
@@ -2,6 +2,7 @@ brew "act"
 brew "ansible"
 brew "awscli"
 brew "c-ares"
+brew "charmbracelet/tap/crush"
 brew "clang-format"
 brew "claude-code"
 brew "entr"
