--- a/requirements/Linux/Brewfile
+++ b/requirements/Linux/Brewfile
@@ -4,6 +4,7 @@ brew "clang-format"
 brew "entr"
 brew "fd"
 brew "fzf"
+brew "gcc"
 brew "gh"
 brew "git-delta"
 brew "glow"
@@ -18,6 +19,7 @@ brew "ncdu"
 brew "neovim"
 brew "nodenv"
 brew "rclone"
+brew "rhajizada/tap/cradle"
 brew "ripgrep"
 brew "rsync"
 brew "rustup"
