updating mac dependencies

--- a/requirements/Darwin/Brewfile
+++ b/requirements/Darwin/Brewfile
@@ -5,6 +5,7 @@ brew "c-ares"
 brew "charmbracelet/tap/crush"
 brew "clang-format"
 brew "claude-code"
+brew "cloc"
 brew "entr"
 brew "fd"
 brew "figlet"
@@ -13,19 +14,29 @@ brew "fzf"
 brew "gh"
 brew "git-delta"
 brew "git-filter-repo"
+brew "git-lfs"
 brew "glow"
 brew "go"
 brew "hashicorp/tap/nomad"
 brew "hashicorp/tap/packer"
 brew "jq"
+brew "k9s"
+brew "kubernetes-cli"
 brew "lazydocker"
 brew "lazygit"
 brew "libgit2@1.7"
 brew "libpq"
+brew "luarocks"
 brew "micromamba"
 brew "ncdu"
 brew "neovim"
 brew "nodenv"
+brew "openapi-generator"
+brew "opencode"
+brew "pandoc"
+brew "pixi"
+brew "plantuml"
+brew "pre-commit"
 brew "rclone"
 brew "reattach-to-user-namespace"
 brew "rhajizada/tap/copycat"
@@ -34,12 +45,15 @@ brew "ripgrep"
 brew "rsync"
 brew "rustup"
 brew "sqlc"
+brew "swagger-codegen"
 brew "tailspin"
 brew "tfenv"
 brew "tmux"
 brew "tree"
+brew "tree-sitter"
 brew "uv"
 brew "wget"
+brew "wishlist"
 brew "wtf"
 brew "yamllint"
 brew "yazi"
